--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -15,18 +15,21 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'contact' %}">Contact</a>
           </li>
+          {% if request.user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'LogOut' %}">Logout</a>
+          </li>
+          {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'LogIn' %}">LogIn</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'SignUp' %}">SignUp</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'LogOut' %}">Logout</a>
-          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
